updated my portfolio page

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						</div>
 						<div class="home__data">
 							<h1 class="home__title">Hi, I am Gabor</h1>
-							<h3 class="home__subtitle">Fullstack developer</h3>
+							<h3 class="home__subtitle">Full stack developer</h3>
 							<p class="home__description">
 								Vast level of knowledge in web design and
 								development , producing quality work.
@@ -169,7 +169,7 @@
 
 					<div class="about__data">
 						<p class="about__description">
-							A passionate full-stack developer based in Espoo,
+							A passionate Full stack developer based in Espoo,
 							with extensive knowledge, working in web
 							technologies and UI / UX design, delivering quality
 							work.
@@ -240,6 +240,66 @@
 							<div class="skills__list grid">
 								<div class="skills__data">
 									<div class="skills__titles">
+										<h3 class="skills__name">React</h3>
+										<span class="skills__number">95%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__react"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">Typescript</h3>
+										<span class="skills__number">90%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__typescript"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">GraphQL</h3>
+										<span class="skills__number">85%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__graphql"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">NextJS</h3>
+										<span class="skills__number">90%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__nextjs"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">JavaScript Vanilla</h3>
+										<span class="skills__number">90%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__js"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
 										<h3 class="skills__name">HTML</h3>
 										<span class="skills__number">90%</span>
 									</div>
@@ -253,35 +313,11 @@
 								<div class="skills__data">
 									<div class="skills__titles">
 										<h3 class="skills__name">CSS</h3>
-										<span class="skills__number">75%</span>
-									</div>
-									<div class="skills__bar">
-										<span
-											class="skills__percentage skills__css"
-										></span>
-									</div>
-								</div>
-
-								<div class="skills__data">
-									<div class="skills__titles">
-										<h3 class="skills__name">JavaScript</h3>
-										<span class="skills__number">90%</span>
-									</div>
-									<div class="skills__bar">
-										<span
-											class="skills__percentage skills__js"
-										></span>
-									</div>
-								</div>
-
-								<div class="skills__data">
-									<div class="skills__titles">
-										<h3 class="skills__name">React</h3>
 										<span class="skills__number">85%</span>
 									</div>
 									<div class="skills__bar">
 										<span
-											class="skills__percentage skills__react"
+											class="skills__percentage skills__css"
 										></span>
 									</div>
 								</div>
@@ -309,24 +345,36 @@
 							<div class="skills__list grid">
 								<div class="skills__data">
 									<div class="skills__titles">
-										<h3 class="skills__name">PHP</h3>
-										<span class="skills__number">80%</span>
-									</div>
-									<div class="skills__bar">
-										<span
-											class="skills__percentage skills__php"
-										></span>
-									</div>
-								</div>
-
-								<div class="skills__data">
-									<div class="skills__titles">
 										<h3 class="skills__name">Node Js</h3>
 										<span class="skills__number">70%</span>
 									</div>
 									<div class="skills__bar">
 										<span
 											class="skills__percentage skills__node"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">GraphQL</h3>
+										<span class="skills__number">85%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__graphql"
+										></span>
+									</div>
+								</div>
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">PHP</h3>
+										<span class="skills__number">80%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__php"
 										></span>
 									</div>
 								</div>
@@ -373,6 +421,21 @@
 								<i class="uil uil-angle-down skills__arrow"></i>
 							</div>
 							<div class="skills__list grid">
+
+								<div class="skills__data">
+									<div class="skills__titles">
+										<h3 class="skills__name">
+											Azure
+										</h3>
+										<span class="skills__number">75%</span>
+									</div>
+									<div class="skills__bar">
+										<span
+											class="skills__percentage skills__azure"
+										></span>
+									</div>
+								</div>
+
 								<div class="skills__data">
 									<div class="skills__titles">
 										<h3 class="skills__name">
@@ -390,7 +453,7 @@
 								<div class="skills__data">
 									<div class="skills__titles">
 										<h3 class="skills__name">Docker</h3>
-										<span class="skills__number">80%</span>
+										<span class="skills__number">85%</span>
 									</div>
 									<div class="skills__bar">
 										<span
@@ -526,7 +589,7 @@
 				<div class="qualification__container container">
 					<div class="qualification__tabs">
 						<div
-							class="qualification__button button--flex qualification__active"
+							class="qualification__button button--flex "
 							data-target="#education"
 						>
 							<i
@@ -536,7 +599,7 @@
 						</div>
 
 						<div
-							class="qualification__button button--flex"
+							class="qualification__button button--flex qualification__active"
 							data-target="#work"
 						>
 							<i
@@ -548,7 +611,7 @@
 					<div class="qualification__sections">
 						<!--==================== QUALIFICATION CONTENT 1 ====================-->
 						<div
-							class="qualification__content qualification__active"
+							class="qualification__content"
 							data-content
 							id="education"
 						>
@@ -556,15 +619,14 @@
 							<div class="qualification__data">
 								<div>
 									<h2 class="qualification__title">
-										Construction Technician
+										Software Developer
 									</h2>
 									<span class="qualification__subtitle"
-										>Budapest - Technical Vocational & High
-										School</span
+										>Hive Helsinki - Helsinki</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
-										2011 - 2016
+										2021 - 2023
 									</div>
 								</div>
 								<div>
@@ -587,7 +649,7 @@
 										Finnish Language School
 									</h2>
 									<span class="qualification__subtitle"
-										>Rauma - SataEdu</span
+										>SataEdu - Rauma</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
@@ -600,14 +662,15 @@
 							<div class="qualification__data">
 								<div>
 									<h2 class="qualification__title">
-										Software Developer
+										Construction Technician
 									</h2>
 									<span class="qualification__subtitle"
-										>Helsinki - Hive Helsinki</span
+										>Technical Vocational & High
+										School - Budapest</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
-										2021 - Present
+										2011 - 2016
 									</div>
 								</div>
 								<div>
@@ -637,7 +700,7 @@
 						</div>
 						<!--==================== QUALIFICATION CONTENT 2 ====================-->
 						<div
-							class="qualification__content"
+							class="qualification__content qualification__active"
 							data-content
 							id="work"
 						>
@@ -645,14 +708,14 @@
 							<div class="qualification__data">
 								<div>
 									<h2 class="qualification__title">
-										Dropshipping Store
+										Full Stack Developer
 									</h2>
 									<span class="qualification__subtitle"
-										>Espoo - Self-Employed</span
+										>Tietoevry - Espoo</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
-										2018 - 2019
+										2023 - Present
 									</div>
 								</div>
 								<div>
@@ -672,14 +735,14 @@
 
 								<div>
 									<h2 class="qualification__title">
-										House Keeper
+										Full Stack Developer
 									</h2>
 									<span class="qualification__subtitle"
-										>Espoo - Kotipalvelu ykköset</span
+										>Anyhau - Espoo</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
-										2019 - 2020
+										2022 - 2023
 									</div>
 								</div>
 							</div>
@@ -691,11 +754,51 @@
 										Scaffolder
 									</h2>
 									<span class="qualification__subtitle"
-										>Espoo - Länsimetro</span
+										>Länsimetro - Espoo</span
 									>
 									<div class="qualification__calendar">
 										<i class="uil uil-calendar-alt"></i>
 										2020 - 2021
+									</div>
+								</div>
+								<div>
+									<span class="qualification__rounder"></span>
+									<span class="qualification__line"></span>
+								</div>
+							</div>
+
+							<div class="qualification__data">
+								<div></div>
+
+								<div>
+									<span class="qualification__rounder"></span>
+									<span class="qualification__line"></span>
+								</div>
+
+								<div>
+									<h2 class="qualification__title">
+										House Keeper
+									</h2>
+									<span class="qualification__subtitle"
+										>Kotipalvelu ykköset - Espoo</span
+									>
+									<div class="qualification__calendar">
+										<i class="uil uil-calendar-alt"></i>
+										2019 - 2020
+									</div>
+								</div>
+							</div>
+							<div class="qualification__data">
+								<div>
+									<h2 class="qualification__title">
+										Dropshipping Store
+									</h2>
+									<span class="qualification__subtitle"
+										>Self-Employed - Espoo</span
+									>
+									<div class="qualification__calendar">
+										<i class="uil uil-calendar-alt"></i>
+										2018 - 2019
 									</div>
 								</div>
 								<div>
@@ -765,12 +868,12 @@
 											class="uil uil-check-circle services__modal-icon"
 										></i>
 										<p>
-											Do awesome and interesting
-											miniprojects like
+											Build awesome and interesting
+											projects like
 											<a
 												class="button--link"
-												href="https://github.com/mobahug/MandelBulb_Fractal_SP"
-												>MandelBulb Fractol</a
+												href="https://jonnekahvila.fi/"
+												>JonneKahvila</a
 											>
 											.
 										</p>
@@ -1269,7 +1372,7 @@
 					<div>
 						<h1 class="footer__title">Gabor Ulenius</h1>
 						<span class="footer__subtitle"
-							>Fullstack developer</span
+							>Full stack developer</span
 						>
 					</div>
 
